--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>youtube </title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <title>youtube</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -12,15 +18,30 @@
       <nav>
         <div class="nav">
           <div class="nav-left">
-                <i class="fa-solid fa-bars"></i>
-                <img src="youtube.png" alt="" />
+            <i class="fa-solid fa-bars"></i>
+            <img src="youtube.png" alt="" />
           </div>
           <div class="nav-search">
-            <input type="search" placeholder="Search" class="search-input">
-            <button class="btn-search"><i class="fa-solid fa-magnifying-glass"></i></button>
-            <button class="btn-mic"><i class="fa-solid fa-microphone"></i></button>
+            <input type="text" placeholder="Search" class="search-input" />
+            <button class="btn-search">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </button>
+            <button class="btn-mic">
+            <i class="fa-solid fa-microphone"></i>
+          </button>
           </div>
-          <div class="nav-right">3</div>
+          <div class="nav-right">
+            <div class="btn-plus">
+              <i class="fa-solid fa-plus"></i>
+              <p>Create</p>
+            </div>
+            <button class="bell-icon">
+              <span><i class="fa-solid fa-bell"></i></span>
+            </button>
+            <div class="profile">
+              <img src="profile.png" alt="">
+            </div>
+          </div>
         </div>
       </nav>
     </header>
