Youtube-Home-Page

--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
   </head>
   <body>
     <header>
-      <nav>
-        <div class="nav">
-          <div class="nav-left">
-            <i class="fa-solid fa-bars"></i>
-            <img src="youtube.png" alt="" />
-          </div>
-          <div class="nav-search">
-            <input type="text" placeholder="Search" class="search-input" />
-            <button class="btn-search">
-              <i class="fa-solid fa-magnifying-glass"></i>
-            </button>
+      <div class="nav">
+        <div class="nav-left">
+          <i class="fa-solid fa-bars"></i>
+          <img src="youtube.png" alt="" />
+        </div>
+        <div class="nav-search">
+          <input type="search" placeholder="Search" class="search-input" />
+        </div>
+        <button class="btn-search">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
+        <div>
+          <div>
             <button class="btn-mic">
-            <i class="fa-solid fa-microphone"></i>
-          </button>
-          </div>
-          <div class="nav-right">
-            <div class="btn-plus">
-              <i class="fa-solid fa-plus"></i>
-              <p>Create</p>
-            </div>
-            <button class="bell-icon">
-              <span><i class="fa-solid fa-bell"></i></span>
+              <i class="fa-solid fa-microphone"></i>
             </button>
-            <div class="profile">
-              <img src="profile.png" alt="">
-            </div>
           </div>
         </div>
-      </nav>
+        <div class="nav-right">
+          <div class="btn-plus">
+            <i id="plus" class="fa-solid fa-plus"></i>
+            <p class="text">Create</p>
+          </div>
+          <button class="bell-icon">
+            <span><i class="fa-solid fa-bell"></i></span>
+          </button>
+          <img class="profile" src="profile.png" alt="" />
+        </div>
+      </div>
     </header>
   </body>
 </html>
